--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+# Aplicación web
+streamlit>=1.28.0
+
+# Procesamiento de datos
 numpy>=1.24.0
 pandas>=2.0.0
+
+# Machine Learning
 scikit-learn>=1.3.0
 umap-learn>=0.5.4
+
+# Visualización
 matplotlib>=3.7.0
 plotly>=5.17.0
 
+# Testing
+pytest>=7.4.0
